switched from url to uri